app/assets/stylesheets/components/question/question.scss
.question {
    display: flex; 
    flex-direction: column; 
}
.question-create-question {
    padding: 0.5rem; 
    background-color: $red; 
    color: $white; 
    border: none; 
    border-radius: 5px; 
    font-size: 1rem; 
    flex: 1; 
    white-space: nowrap; 
}

.question-create-question:hover {
    background: $focus-red; 
}

.question-header {
    display: flex; 
    flex-direction: row; 
    justify-content: space-between; 
    align-items: center; 
    padding-left: 2.5rem; 
}

.question-stats {
    display: flex; 
    padding-bottom: 1rem; 
    margin-bottom: 0.5rem; 
    margin-left: 2.5rem; 
    border-bottom: 1px solid $lighter-silver; 
    font-size: $comment-size; 
}
.question-stat {
    padding-left: 0.2rem; 
    padding-right: 0.2rem; 
}
.question-stats-label {
    color: $gray; 
    margin-right: 0.25rem; 
}
.question-stats-value {
    margin-right: 0.6rem; 
}

.question-left {
    display: flex; 
    align-items: flex-start; 
}

.question-vote-bookmark {
    display: flex; 
    flex-direction: column; 
    align-items: center; 
}

.question-title {
    color: $red; 
    font-size: $big-title-size; 
    padding-top: 2rem; 
    padding-bottom: 2rem; 
    padding-right: 3rem; 
}

.question-body {
    line-height: $big-line-height; 
}

.question-footer {
    padding-top: 1rem; 
    display: flex; 
    justify-content: space-between;
    align-items: flex-end;  
}

.question-button-console {
    display: flex; 
}

.question-info {
    display: flex; 
}

.DraftEditor-root {
    width: 50vw; 
}

